@@ -14,6 +14,7 @@
     <extension point="xbmc.addon.metadata">
         <news>
 6.4.2
+[add] Video quality selection to Settings - MPEG-DASH
 [fix] unescape html entities in title and plot
 [fix] handling of invalid grant when refreshing access token
 [fix] adding suggested videos when played from some widgets
