@@ -17,6 +17,7 @@ CACHE_SIZE = 'kodion.cache.size'  # (int)
 VIDEO_QUALITY = 'kodion.video.quality'  # (int)
 VIDEO_QUALITY_ASK = 'kodion.video.quality.ask'  # (bool)
 USE_DASH = 'kodion.video.quality.mpd'  # (bool)
+MPD_QUALITY_SELECTION = 'kodion.mpd.quality.selection'  # (int)
 AUDIO_ONLY = 'kodion.audio_only'  # (bool)
 AGE_GATE = 'kodion.age.gate'  # (bool)
 SUBTITLE_LANGUAGE = 'kodion.subtitle.languages.num'  # (int)
@@ -34,7 +35,6 @@ ALTERNATIVE_PLAYER_WEB_URLS = 'kodion.alternative_player.web.urls'  # (bool)
 ALLOW_DEV_KEYS = 'youtube.allow.dev.keys'  # (bool)
 
 DASH_VIDEOS = 'kodion.mpd.videos'  # (bool)
-DASH_USE_WEBM = 'kodion.mpd.webm'  # (bool)
 DASH_INCL_HDR = 'kodion.mpd.hdr'  # (bool)
 DASH_LIVE_STREAMS = 'kodion.mpd.live_streams'  # (bool)
 
