@@ -1,4 +1,5 @@
 6.4.2
+[add] Video quality selection to Settings - MPEG-DASH
 [fix] unescape html entities in title and plot
 [fix] handling of invalid grant when refreshing access token
 [fix] adding suggested videos when played from some widgets
